--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "junit-processor",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A JUnit XML post processing utility, for cleanup and similar purposes",
   "main": "index.js",
   "bin": "./bin/junit-processor",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ci": "npm run lint && npm run test",
+    "test": "./node_modules/mocha/bin/mocha test/**/*.js --reporter spec",
+    "lint": "eslint lib tests",
+    "coverage": "nyc npm run test"
   },
   "repository": {
     "type": "git",
@@ -22,6 +25,20 @@
   "homepage": "https://github.com/bitcoder/junit-processor#readme",
   "dependencies": {
     "commander": "^8.3.0",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "xmllint": "^0.1.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-xml": "^0.4.0",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "mocha": "^9.1.3",
+    "nyc": "^15.1.0",
+    "prettier": "^2.5.1",
+    "sinon": "^12.0.1",
+    "sinon-chai": "^3.7.0"
   }
 }
