--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "ci": "npm run lint && npm run test",
     "test": "./node_modules/mocha/bin/mocha test/**/*.js --reporter spec",
-    "lint": "eslint lib tests",
+    "lint": "eslint lib test",
     "coverage": "nyc npm run test"
   },
   "repository": {
